samples/_failures_safe/1761273792_b5fb1d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2fa1bf5f.c: In function ‘main’:
./samples/SAFE/__tmp_2fa1bf5f.c:160:9: error: expected expression at end of input
  160 |         for (
      |         ^~~
./samples/SAFE/__tmp_2fa1bf5f.c:160:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2fa1bf5f.c:160:9: error: expected declaration or statement at end of input
